{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 79,
  "lineage": "f97a4e34-bba1-35df-7ea3-65ac5e90c59e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013f17f36f8b1fefb",
            "arn": "arn:aws:ec2:us-east-1:251465816834:instance/i-0a47aa4bc3d7f177f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a47aa4bc3d7f177f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devopskp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f79f20a8e87fe5e",
            "private_dns": "ip-172-9-1-232.ec2.internal",
            "private_ip": "172.9.1.232",
            "public_dns": "ec2-3-88-109-34.compute-1.amazonaws.com",
            "public_ip": "3.88.109.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0257a77a441f321ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c1a232035fc5981",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "dev",
              "Name": "dev-Server-1",
              "Owner": "Bnagella"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c2f6a393a0623c30"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:internet-gateway/igw-0c51baafaa4e5c15d",
            "id": "igw-0c51baafaa4e5c15d",
            "owner_id": "251465816834",
            "tags": {
              "Name": "dev-aws-igw"
            },
            "vpc_id": "vpc-0f2a120ec3f52952b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:route-table/rtb-0fa954c27f5a4b9f1",
            "id": "rtb-0fa954c27f5a4b9f1",
            "owner_id": "251465816834",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c51baafaa4e5c15d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_Main_table-testing"
            },
            "vpc_id": "vpc-0f2a120ec3f52952b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09446b201896b4ef3",
            "route_table_id": "rtb-0fa954c27f5a4b9f1",
            "subnet_id": "subnet-03c1a232035fc5981"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:security-group/sg-0c2f6a393a0623c30",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2f6a393a0623c30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "251465816834",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f2a120ec3f52952b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:subnet/subnet-03c1a232035fc5981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.9.1.0/24",
            "id": "subnet-03c1a232035fc5981",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251465816834",
            "tags": {
              "Name": "dev_Public_Subnet1-testing"
            },
            "tags_all": {
              "Name": "dev_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-0f2a120ec3f52952b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:subnet/subnet-0002d019317924e68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.9.2.0/24",
            "id": "subnet-0002d019317924e68",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251465816834",
            "tags": {
              "Name": "dev_Public_Subnet2-testing"
            },
            "tags_all": {
              "Name": "dev_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-0f2a120ec3f52952b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:subnet/subnet-0accae04fe8e596c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.9.3.0/24",
            "id": "subnet-0accae04fe8e596c3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251465816834",
            "tags": {
              "Name": "dev_Public_Subnet3-testing"
            },
            "tags_all": {
              "Name": "dev_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-0f2a120ec3f52952b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:vpc/vpc-0f2a120ec3f52952b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.9.0.0/16",
            "default_network_acl_id": "acl-0313b599d4fa80212",
            "default_route_table_id": "rtb-0eadd643414f23d2d",
            "default_security_group_id": "sg-0c2886a4e9e25784d",
            "dhcp_options_id": "dopt-0514b037410579994",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f2a120ec3f52952b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eadd643414f23d2d",
            "owner_id": "251465816834",
            "tags": {
              "Name": "dev-aws-testing",
              "Owner": "bnagella",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-aws-testing",
              "Owner": "bnagella",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}